--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "formidable": "^3.5.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
