--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "axios": "^1.6.8",
     "formidable": "^3.5.1",
     "next": "14.2.1",
+    "papaparse": "^5.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-plotly.js": "^2.6.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
