--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 backend/node_modules/
 microservices/ModelRunService/credentials.json
 microservices/ModelRunService/client_secrets.json
+microservices/ModelRunService/__pycache__
+microservices/ModelRunService/repos
+microservices/ModelRunService/results
