Co-authored-by: Swayam <schlechter-afk@users.noreply.github.com> Co-authored-by: ishwarbb <ishwarbb@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ microservices/ModelRunService/client_secrets.json
 microservices/ModelRunService/__pycache__
 microservices/ModelRunService/repos
 microservices/ModelRunService/results
+/sep3
