Co-authored-by: Mitanshk01 <Mitanshk01@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ microservices/ModelRunService/__pycache__
 microservices/ModelRunService/repos
 microservices/ModelRunService/results
 /sep3
+/node_modules
