--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "chart.js": "^4.4.2",
     "plotly.js": "^2.31.1",
+    "plotly.js-dist": "^2.31.1",
     "react-chartjs-2": "^5.2.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^2.12.6",
